added new endpoint for retail-stores, updated openapi file
