# data/routes/retail_store.py
@@ -4,5 +4,6 @@ from data.views.retail_store import RetailStoreViewClass
 
 retail_store_routes = [
     path("customers/<str:customer_code>/retail-store/",
-         RetailStoreViewClass.as_view({"post":"create"}), name='retail_stores')
+         RetailStoreViewClass.as_view({"post": "create",
+                                       "get": "get_all"}), name='retail_stores')
 ]
